Fixed loader-wrapper z-index, after page loaded.

--- a/main.scss
+++ b/main.scss
@@ -46,7 +46,7 @@ body {
   &.hidden {
     opacity: 0;
 
-    z-index: 0;
+    z-index: -1;
 
     transition: $base-transition;
   }
